@@ -74,8 +74,9 @@ isTRUE(x)
   operators).
 }
 \value{
-  For \code{!}, a logical or raw vector of the same length as \code{x}:
-  names, dims and dimnames are copied from \code{x}.
+  For \code{!}, a logical or raw vector(for raw \code{x}) of the same
+  length as \code{x}: names, dims and dimnames are copied from \code{x},
+  and all other attributes (including class) if the no coercion is done.
 
   For \code{|}, \code{&} and \code{xor} a logical or raw vector. The
   elements of shorter vectors are recycled as necessary (with a
